chore(ci.yml): add names to build and test jobs for better readability and organization

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -30,6 +31,7 @@ jobs:
           echo "- Entorno: $RUNNER_OS" >> $GITHUB_STEP_SUMMARY
 
   test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
