--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 # testing
 /coverage
+.nyc_output/
+junit.xml
 
 # next.js
 /.next/
@@ -22,6 +24,13 @@
 
 # misc
 .DS_Store
+Thumbs.db
+*.log
+/.cache/
+.eslintcache
+.stylelintcache
+.idea/
+.vscode/
 *.pem
 
 # debug
@@ -32,10 +41,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
