--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,12 @@ jobs:
 
       - name: 🏗️ Build
         run: bun run build
+        env:
+          NODE_ENV: production
+          CI: true
 
       - name: 📝 Summary
+        if: success()
         run: |
           echo "### ✅ Build completado" >> $GITHUB_STEP_SUMMARY
           echo "- Rama: $GITHUB_REF_NAME" >> $GITHUB_STEP_SUMMARY
@@ -36,6 +40,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: 📥 Checkout repository
@@ -51,8 +56,25 @@ jobs:
 
       - name: 🧪 Test (CI)
         run: bun run test:ci
+        env:
+          CI: true
+          NODE_ENV: test
+
+      - name: 📊 Upload coverage reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage/
+          retention-days: 7
 
       - name: 📝 Summary
+        if: always()
         run: |
-          echo "### ✅ Tests completados" >> $GITHUB_STEP_SUMMARY
-          echo "- Cobertura generada en ./coverage" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ job.status }}" == "success" ]; then
+            echo "### ✅ Tests completados" >> $GITHUB_STEP_SUMMARY
+            echo "- Cobertura generada en ./coverage" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "### ❌ Tests fallaron" >> $GITHUB_STEP_SUMMARY
+            echo "Revisa los logs para más detalles" >> $GITHUB_STEP_SUMMARY
+          fi
