--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.15.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-resizable-panels": "^3.0.6",
